--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -1,4 +1,5 @@
 .popup__input {
+  position: relative;
   width: 100%;
   height: 47px;
   border: 0;
@@ -7,11 +8,11 @@
   line-height: 18px;
   box-sizing: border-box;
   padding: 10px 0 0;
-  margin-bottom: 10px;
+  margin-bottom: 35px;
 }
 
-.popup__input:last-of-type {
-  margin-bottom: 0;
+.popup__input_type_error {
+  border-bottom: 1px solid rgba(255, 0, 0, 1);
 }
 
 @media screen and (max-width: 568px) {
